--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 	font-family: Helvetica, Arial, sans-serif;
 }
 .jumbotron {
-	background-image: url("silcHeader.png");
+	background-image: url("../img/silcHeader.png");
 	-webkit-background-size: 100% 100%;
 	-moz-background-size: 100% 100%;
 	-o-background-size: 100% 100%;
