--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 
 .jumbotron {
-	background-image: url("../img/silcHeader.png");
+	background-image: url("../images/silcHeader.png");
 	-webkit-background-size: 100% 100%;
 	-moz-background-size: 100% 100%;
 	-o-background-size: 100% 100%;
@@ -16,7 +16,6 @@ table, th, tr, td {
 	padding: 5px;
 	font-size: 36px;
 }
-
 
 .totals {
 	border-style: none;
