--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,8 @@ table, th, tr, td {
 
 td {
 	height: auto;
-	min-width: 50px;
+	height: 50px;
+	width: 50px;
 	padding: 0;
 	text-align: center;
 	
