added registration/login capability, added readme file, cache is presever on back btn after form submission, create puzzle and show solutions is restricted to logged in users.

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
 	min-height:100vh;
 }
 
+#loginAlert,
+#registerAlert {
+	display: none;
+}
+
 .col-auto {
 	overflow-x:auto;
 	overflow-y: hidden;
