Added favicon and link rel img_src for when site url is posted to social media -displays img of puzzle. Set default height/width for puzzle when in play mode for columns >= 16.

--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,8 @@ table {
 	table-layout: fixed;	
 }
 
-table, th, tr, td {
+table, tr, td {
 	padding: 10px;
-	font-size: 30px;
 	cursor: default;
 }
 
@@ -27,6 +26,7 @@ td {
 	min-width: 50px;
 	padding: 0;
 	text-align: center;
+	font-size: 30px;
 	word-wrap: normal;
 }
 
